2001-08-20  Akim Demaille  <akim@epita.fr>

	* tests/torture.at (Configuring subdirectories): New test.
	* lib/autoconf/general.m4 (_AC_INIT_SRCDIR): Say what you are
	looking for.
	* m4/atconfig.m4: Be sure the let $[0] be expandable.
	(top_srcdir): Fix its computation.

2001-08-20  Akim Demaille  <akim@epita.fr>

	* lib/autoconf/general.m4 (_AC_OUTPUT_COMMANDS): Say what you do.
	* m4/atconfig.m4 (AT_CONFIG): $1 is now the directory where the
	test suite lives.
	Create `atconfig' automagically.
	Configure atlocal.in if present.
	* tests/atconfig.in: Remove.
	* tests/atlocal.in: New.
	* tests/Makefile.am: Adjust.

2001-08-20  Akim Demaille  <akim@epita.fr>

	Huh!?!?!  There are still some user EOF tags used, which prevents
	their use in AC_CONFIG_COMMANDS for instance...

	* lib/autoconf/general.m4, lib/autoconf/specific.m4,
	* lib/autotest/general.m4: Rename the EOF tags as `_ACEOF',
	`_CSEOF', or `_ATEOF', as appropriate.
	* lib/m4sugar/Makefile.am, lib/autoconf/Makefile.am,
	* lib/autotest/Makefile.am (check-local): Enforce this constraint.

2001-08-20  Akim Demaille  <akim@epita.fr>

	* tests/base.at, tests/m4sh.at, tests/m4sugar.at,
	* tests/semantics.at, tests/tools.at, tests/torture.at:
	s/^AT_DATA\(([^][]+),/AT_DATA([$1],/.

	
2001-08-20  Akim Demaille  <akim@epita.fr>

	Autotest invokes M4sh's initialization.

	* lib/autotest/general.m4: Adjust the diversion names.
	(AT_INIT): Run AS_INIT.
	Use the BINSH diversion to invoke /bin/sh.
	* tests/base.at, tests/m4sh.at, tests/m4sugar.at, tests/tools.at:
	* tests/torture.at: Respect M4sugar and M4sh macro name spaces.

	
2001-08-20  Akim Demaille  <akim@epita.fr>

	Let M4sh have its own diversions.

	* lib/autoconf/general.m4 (_m4_divert(BINSH), _m4_divert(REVISION))
	(_m4_divert(NOTICE)): Rename as...
	* lib/m4sugar/m4msh.m4 (_m4_divert(BINSH), _m4_divert(HEADER-REVISION))
	(_m4_divert(HEADER-COMMENT)): these.
	(_m4_divert(HEADER-COPYRIGHT), _m4_divert(HEADER-COPYRIGHT)): New.